# core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
prepare/: __main__.py
prepare/core/: cli.py  preparer.py  runner.py  validator.py
prepare/utils/: __init__.py  cache.py
prepare_assignment/cli/: main.py  task.py  tasks.py
prepare_assignment/core/: cli.py  command.py  expression.py  main.py  preparer.py  runner.py  subsituter.py  task_handler.py  tasks.py  validator.py
prepare_assignment/data/: action_definition.py  action_properties.py  config.py  constants.py  dependency_graph.py  errors.py  job_environment.py  prepare.py  step_environment.py  task_definition.py  task_properties.py  validation_error.py
prepare_assignment/schemas/: action.schema.json  actions.schema.json_template  config.schema.json  prepare.schema.json
prepare_assignment/utils/: cache.py  config.py  dependency.py  executables.py  logger.py  tasks.py
tests/: test_main.py
tests/core/: test_command.py  test_expression.py  test_preparer.py  test_resolve_version.py  test_runner.py  test_substituter.py  test_validator.py
tests/testproject/: prepare.yml
tests/utils/: test_cache.py  test_default_validator.py  test_logger.py  test_paths.py
