[project]
name = "prepare-assignment"
version = "0.2.1"
description = "Prepare assignment"
authors = [{name = "Bonajo", email = "m.bonajo@fontys.nl"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ruamel-yaml>=0.18.5",
    "jsonschema>=4.21.1",
    "importlib-resources>=6.1.1",
    "gitpython>=3.1.41",
    "prepare-toolbox==0.4.0",
    "virtualenv>=20.25.0",
    "typer==0.17.3",
    "treelib>=1.7.0",
    "multipledispatch>=1.0.0",
    "dacite>=1.9.2",
    "packaging>=24.0",
    "simpleeval>=1.0.0",
]

[project.scripts]
prepare = "prepare_assignment.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "mypy>=1.1.1",
    "types-jsonschema>=4.17.0.6",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]

[tool.mypy]
warn_return_any = true

[[tool.mypy.overrides]]
module = "treelib,ruamel,virtualenv"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "simpleeval"
ignore_missing_imports = true
